Added the Form Controller and submission. Also added the encryption keys to the config.

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
+APP_BC_K=secretkey
+APP_BC_K2=secretkey2
+APP_C_IV_L=aes-256-cbc
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
